配置路由及其他

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -10,6 +10,7 @@ html {
   font-family: '-apple-system', 'BlinkMacSystemFont', 'Roboto', 'Helvetica Neue',
     '微软雅黑', sans-serif;
   overflow: hidden;
+  font-size: 14px;
 }
 body {
   overflow: hidden;
